# cairn

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  bunfig.toml  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
electron/: main.ts  preload.ts  tsconfig.json
electron/ipc/: claude.ts  lancedb.ts  store.ts  terminal.ts  workspace.ts
electron/lib/: escape.test.ts  escape.ts  fixPath.test.ts  fixPath.ts  parseClaudeJson.test.ts  promptBuilder.ts  sessionParser.fixture.test.ts  sessionParser.test.ts  sessionParser.ts
native-embed/: .gitignore  Cargo.toml  loader.cjs  package.json  test.mjs
native-embed/src/: lib.rs
scripts/: afterPack.cjs  test-channels.ts  test-search-native.ts
src/: App.tsx
src/components/: ContextMenu.tsx  PreviewPane.tsx  SessionsList.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx
src/hooks/: useShortcuts.ts
src/lib/: cn.test.ts  path.ts  search.ts
src/modals/: AIRenameModal.tsx  HelpModal.tsx  Modal.tsx  QuickStartModal.tsx  SettingsModal.tsx
src/screens/: AllSessionsView.tsx  EmptyState.tsx  MainView.tsx  ProjectDetailView.tsx  SessionDetailView.tsx  WorkspacesHome.tsx  WorkspacesView.tsx
src/store/: AppStore.tsx
src/styles/: globals.css
src/types/: cairn-api.d.ts
